--- a/auth.html
+++ b/auth.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -38,7 +37,7 @@
         .then(() => {
           window.location.href = "index.html";
         })
-[17/09, 12:12] Grasyson: .catch((error) => {
+        .catch((error) => {
           document.getElementById("message").innerText = error.message;
         });
     }
