--- a/auth.html
+++ b/auth.html
@@ -1,23 +1,87 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Login / Signup</title>
   <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-auth.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #4facfe, #00f2fe);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .container {
+      background: #fff;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0px 8px 20px rgba(0,0,0,0.15);
+      width: 320px;
+      text-align: center;
+    }
+    h2 {
+      margin-bottom: 20px;
+      color: #333;
+    }
+    input {
+      width: 90%;
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+    }
+    button {
+      width: 45%;
+      padding: 10px;
+      margin: 10px 5px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 14px;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    button:nth-child(1) {
+      background: #4facfe;
+      color: white;
+    }
+    button:nth-child(2) {
+      background: #00c9a7;
+      color: white;
+    }
+    button:hover {
+      opacity: 0.8;
+    }
+    #message {
+      margin-top: 10px;
+      color: red;
+      font-size: 14px;
+    }
+  </style>
 </head>
 <body>
-  <h2>Login / Signup</h2>
+  <div class="container">
+    <h2>Login / Signup</h2>
 
-  <input type="email" id="email" placeholder="Email"><br><br>
-  <input type="password" id="password" placeholder="Password"><br><br>
+    <input type="email" id="email" placeholder="Email"><br>
+    <input type="password" id="password" placeholder="Password"><br>
 
-  <button onclick="login()">Login</button>
-  <button onclick="signup()">Sign Up</button>
+    <button onclick="login()">Login</button>
+    <button onclick="signup()">Sign Up</button>
 
-  <p id="message" style="color: red;"></p>
+    <p id="message"></p>
+  </div>
 
-  <script>
+  <script type="module">
+    // Import Firebase functions
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.3.0/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword } 
+      from "https://www.gstatic.com/firebasejs/10.3.0/firebase-auth.js";
+
     // Your Firebase configuration
     const firebaseConfig = {
       apiKey: "AIzaSyBvLXOx9N88hBBLMHVCcEM3zBKAYfQl_o",
@@ -26,14 +90,15 @@
     };
 
     // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
 
-    function login() {
+    // Login function
+    window.login = function() {
       const email = document.getElementById("email").value;
       const password = document.getElementById("password").value;
 
-      auth.signInWithEmailAndPassword(email, password)
+      signInWithEmailAndPassword(auth, email, password)
         .then(() => {
           window.location.href = "index.html";
         })
@@ -42,11 +107,12 @@
         });
     }
 
-    function signup() {
+    // Signup function
+    window.signup = function() {
       const email = document.getElementById("email").value;
       const password = document.getElementById("password").value;
 
-      auth.createUserWithEmailAndPassword(email, password)
+      createUserWithEmailAndPassword(auth, email, password)
         .then(() => {
           window.location.href = "index.html";
         })
