--- a/login.html
+++ b/login.html
@@ -1,6 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <title>Login / Signup</title>
+  <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.3.0/firebase-firestore.js"></script>
+  <!-- ... keep your CSS ... -->
+</head>
+<body>
+  <!-- ... your navbar, sidebar, section ... -->
+  <section>
+    <h2>Login / Signup</h2>
+    <input type="email" id="email" placeholder="Email"><br>
+    <input type="password" id="password" placeholder="Password"><br>
+    <button onclick="login()">Login</button>
+    <button onclick="signup()">Sign Up</button>
+    <span class="forgot" onclick="resetPassword()">Forgot Password?</span>
+    <p id="message"></p>
+  </section>
+  <footer>
+    &copy; 2025 St Paul Learning Centre. All rights reserved.
+  </footer>
+  <script>
+    function openMenu() { document.getElementById("sideMenu").style.width = "260px"; }
+    function closeMenu() { document.getElementById("sideMenu").style.width = "0"; }
+  </script>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.3.0/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, sendPasswordResetEmail }
+      from "https://www.gstatic.com/firebasejs/10.3.0/firebase-auth.js";
+    import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/10.3.0/firebase-firestore.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyBvLXOx9N88hBBLMHVCcEM3zBK-AYfQI_o",
+      authDomain: "my-school-st-paul-1455a.firebaseapp.com",
+      projectId: "my-school-st-paul-1455a"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
+
+    async function logUser(uid, email, type) {
+      await setDoc(doc(db, "signedInUsers", uid), {
+        email,
+        type,
+        lastAction: new Date().toISOString()
+      });
+    }
+
+    // Login
+    window.login = function() {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+      signInWithEmailAndPassword(auth, email, password)
+        .then((userCred) => {
+          logUser(userCred.user.uid, userCred.user.email, "login");
+          window.location.href = "index.html";
+        })
+        .catch(err => document.getElementById("message").innerText = err.message);
+    }
+
+    // Signup
+    window.signup = function() {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+      createUserWithEmailAndPassword(auth, email, password)
+        .then((userCred) => {
+          logUser(userCred.user.uid, userCred.user.email, "signup");
+          window.location.href = "index.html";
+        })
+        .catch(err => document.getElementById("message").innerText = err.message);
+    }
+
+    // Password Reset
+    window.resetPassword = function() {
+      const email = document.getElementById("email").value;
+      if (!email) {
+        document.getElementById("message").innerText = "Enter your email to reset password.";
+        return;
+      }
+      sendPasswordResetEmail(auth, email)
+        .then(() => document.getElementById("message").innerText = "Password reset email sent!")
+        .catch(err => document.getElementById("message").innerText = err.message);
+    }
+  </script>
+</body>
+</html>
+<head>
     <meta charset="UTF-8">
     <title>Student Portal Login - St Paul Learning Centre</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
