--- a/login.html
+++ b/login.html
@@ -33,7 +33,8 @@
 
         signInWithEmailAndPassword(auth, email, password)
           .then(userCred => {
-            if (userCred.user.email === adminEmail) {
+            // Corrected check: Convert both emails to lowercase and trim whitespace
+            if (userCred.user.email.toLowerCase().trim() === adminEmail.toLowerCase().trim()) {
               // Show sensitive page menu
               document.getElementById("loginSection").style.display = "none";
               document.getElementById("menuSection").style.display = "block";
@@ -58,7 +59,6 @@
     <p>Restricted Access – Admin Only</p>
   </header>
 
-  <!-- Login Form -->
   <section id="loginSection">
     <h2>Admin Login</h2>
     <form id="loginForm">
@@ -72,7 +72,6 @@
     </form>
   </section>
 
-  <!-- Sensitive Page Menu -->
   <section id="menuSection" style="display:none;">
     <h2>Welcome, Nicholas</h2>
     <p>Select a page to access:</p>
