--- a/teacher-resources.html
+++ b/teacher-resources.html
@@ -1,28 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-  import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-  const firebaseConfig = {
-    apiKey: "AIzaSyBvLXOx9N88hBBLMHVCcEM3zBK-AYfQI_o",
-    authDomain: "my-school-st-paul-1455a.firebaseapp.com",
-    projectId: "my-school-st-paul-1455a",
-  };
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-
-  const adminEmail = "nicholasbagenda@gmail.com";
-
-  onAuthStateChanged(auth, (user) => {
-    if (!user || user.email.toLowerCase().trim() !== adminEmail.toLowerCase().trim()) {
-      // Not signed in, or not admin – block!
-      signOut(auth); // optional: logs out non-admins instantly
-      window.location.href = "admin-login.html"; // <-- your admin login page filename
-    }
-    // else: allow access
-  });
-    </script>
     <meta charset="UTF-8">
     <title>Teacher Resources - St Paul Learning Centre</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -55,5 +33,31 @@
     <footer>
         &copy; 2025 St Paul Learning Centre. All rights reserved.
     </footer>
+
+    <!-- Firebase Auth Script -->
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+      import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+
+      const firebaseConfig = {
+        apiKey: "AIzaSyBvLXOx9N88hBBLMHVCcEM3zBK-AYfQI_o",
+        authDomain: "my-school-st-paul-1455a.firebaseapp.com",
+        projectId: "my-school-st-paul-1455a",
+      };
+
+      const app = initializeApp(firebaseConfig);
+      const auth = getAuth(app);
+
+      const adminEmail = "nicholasbagenda@gmail.com";
+
+      // Check auth state
+      onAuthStateChanged(auth, (user) => {
+        if (!user || user.email.toLowerCase().trim() !== adminEmail.toLowerCase().trim()) {
+          signOut(auth); // optional: log out non-admins
+          window.location.href = "admin-login.html"; // redirect to login
+        }
+        // else: user is allowed, do nothing
+      });
+    </script>
 </body>
 </html>
